bootstrap updated, authorization fixed
